[tool.poetry]
name = "clearvoice"
version = "1.0.0"
description = ""

[tool.poetry.dependencies]
python = "^3.8"
# torch = ">=2.0.1"
# pesq = "0.0.4"
# #pystoi = "0.3.3"
# scipy = ">=1.10.1"
# soundfile = "0.12.1"
# torchaudio = ">=2.0.2"
# yamlargparse = "1.31.1"
# torchinfo = "1.8.0"
# tqdm = "4.67.0"
# pyyaml = "*"
# pysptk = "*"
# pymcd = "*"
# pyworld = "*"
# fastdtw = "*"
# museval = "*"
# resampy = "*"
# onnxruntime = "*"
# gammatone = "*"
# librosa = "0.10.2.post1"
# #opencv-python = "4.10.0.84"
# mir_eval = "0.7"
# #numpy = ">=1.24.3"
# tensorboard = "2.14.0"
# torch-complex = ">=0.4.4"
# rotary-embedding-torch = "0.8.3"
# python_speech_features = "0.6"
# # typeguard = "4.3.0"
# scenedetect = "*"
# torchvision = "*"
# huggingface-hub = ">=0.26.2"
# gdown = "5.2.0"
# pydub = "*"
einops = "0.8.1"
huggingface_hub = "0.30.2"
joblib = "1.4.2"
librosa = "*"
numpy = "*"
packaging = "25.0"
pesq = "0.0.4"
pydub = "*"
rotary_embedding_torch = "0.8.3"
scipy = "^1.10.0"
soundfile = "*"
torch = "^2.1.0"
torchaudio = "^2.1.0"
torchinfo = "*"
torchvision = "*"
tqdm = "*"
yamlargparse = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
